--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,7 @@
-h1 {
-  color: red;
-}
+@import "./normalize.scss";
+@import "./variables.scss";
+@import "./fonts.scss";
+@import "./scaffolding.scss";
+@import "./button.scss";
+@import "./modal.scss";
+@import "./overlay.scss";
